--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,7 @@
 /blueprints/*/files/**/*.js
+node_modules/*
+**/vendor/*.js
+vendor/**/*.js
+dist/**/*.js
+tmp/**/*.js
+app/locales/*/translations.js
