--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-sass": "^10.0.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-component-css": "^0.6.7",
     "ember-data": "~3.1.0",
     "ember-electron": "^2.10.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-intl": "^3.5.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mocha": "^0.14.0",
@@ -49,7 +52,8 @@
     "ember-source": "~3.1.0",
     "ember-websockets": "^7.2.0",
     "eslint-plugin-ember": "^5.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "sass": "^1.17.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
