--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mocha": "^0.14.0",
     "ember-resolver": "^4.0.0",
+    "ember-sinon": "^3.1.0",
     "ember-source": "~3.1.0",
     "ember-websockets": "^7.2.0",
     "eslint-plugin-ember": "^5.0.0",
