--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mocha": "^0.14.0",
+    "ember-modal-dialog": "^3.0.0-beta.3",
     "ember-resolver": "^4.0.0",
     "ember-sinon": "^3.1.0",
     "ember-source": "~3.1.0",
