--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "ember-websockets": "^7.2.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3",
-    "sass": "^1.17.1"
+    "sass": "^1.17.1",
+    "ui-ember-slider": "^0.5.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
