--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "ember-data": "~3.1.0",
     "ember-electron": "^2.10.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-gestures": "^1.1.1",
+    "ember-hammertime": "^1.6.0",
     "ember-inline-svg": "^0.2.1",
     "ember-intl": "^3.5.0",
     "ember-load-initializers": "^1.0.0",
