--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electron-forge": "^5.2.4",
     "electron-prebuilt-compile": "4.0.0",
     "ember-ajax": "^3.0.0",
+    "ember-auto-import": "^1.2.21",
     "ember-cli": "~3.1.4",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
@@ -56,6 +57,7 @@
     "ember-source": "~3.1.0",
     "ember-websockets": "^7.2.0",
     "eslint-plugin-ember": "^5.0.0",
+    "heatmap.js": "^2.0.5",
     "loader.js": "^4.2.3",
     "sass": "^1.17.1",
     "ui-ember-slider": "^0.5.0"
