--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "highcharts": "^7.0.3",
     "loader.js": "^4.2.3",
     "mathjs": "^5.9.0",
-    "sass": "^1.17.2",
-    "ui-ember-slider": "^0.5.0"
+    "sass": "^1.17.2"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
