--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron-prebuilt-compile": "4.0.0",
     "ember-ajax": "^3.1.0",
     "ember-auto-import": "^1.5.2",
+    "ember-burger-menu": "^3.3.3",
     "ember-cli": "~3.1.4",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
